# postgresql-mcp

./: .directory  .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  DEPLOY.md  Dockerfile  INSTRUCTIONS.md  README.md  ROADMAP.md  TODO.md  claude.md  docker-compose.deploy.yml  docker-compose.yml  gemini.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
coldquery/: app.py  dependencies.py  server.py
coldquery/core/: context.py  database.py  executor.py  logger.py  session.py
coldquery/middleware/: session_echo.py
coldquery/prompts/: analyze_query.py  debug_locks.py
coldquery/resources/: monitor_resources.py  schema_resources.py
coldquery/security/: access_control.py  auth.py  identifiers.py
coldquery/tools/: pg_admin.py  (+17 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATION.md  TEST_QUALITY_ASSESSMENT.md  TODO.md  TROUBLESHOOTING.md  architecture.md  fastmcp-api-patterns.md  secrets-management.md
legacy/: .dockerignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  ROADMAP.md  claude.md  docker-compose.deploy.yml  package-lock.json  package.json
scripts/: load-secrets.sh  run-deployment-tests.sh  run-e2e-tests.sh  setup-test-db.sh
test-database/: reset-resources.md  test-database.sql
tests/: live_test.py  test_context.py  test_core.py  test_executor.py  test_pg_query.py  test_security.py  test_session.py  test_tools_admin.py  test_tools_query.py  test_tools_schema.py  test_tools_tx.py
(+66 files in other folders)
