[project]
name = "coldquery"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0b1",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "ruff>=0.8", "mypy>=1.13"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false

[tool.setuptools.packages.find]
include = ["coldquery*"]
exclude = ["tests*"]
